update icon style

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -88,5 +88,9 @@ body {
   transform: translate3d(0, 0, 0); /* Forces GPU layer */
 }
 
+div[data-react-joyride="beacon"] {
+  display: none !important;
+}
+
 
 
